--- a/index.html
+++ b/index.html
@@ -163,11 +163,15 @@
               "./assets/placeholder.jpg",
               "./assets/placeholder.jpg",
               "./assets/placeholder.jpg",
+              "./assets/placeholder.jpg",
+              "./assets/placeholder.jpg",
             ],
           },
           "Landes de gascognes": {
             description: "Description for Landes de gascognes.",
             images: [
+              "./assets/placeholder2.jpg",
+              "./assets/placeholder2.jpg",
               "./assets/placeholder2.jpg",
               "./assets/placeholder2.jpg",
               "./assets/placeholder2.jpg",
@@ -179,11 +183,15 @@
               "./assets/placeholder.jpg",
               "./assets/placeholder.jpg",
               "./assets/placeholder.jpg",
+              "./assets/placeholder.jpg",
+              "./assets/placeholder.jpg",
             ],
           },
           Reportages: {
             description: "Description for Reportages.",
             images: [
+              "./assets/placeholder2.jpg",
+              "./assets/placeholder2.jpg",
               "./assets/placeholder2.jpg",
               "./assets/placeholder2.jpg",
               "./assets/placeholder2.jpg",
@@ -195,11 +203,15 @@
               "./assets/placeholder.jpg",
               "./assets/placeholder.jpg",
               "./assets/placeholder.jpg",
+              "./assets/placeholder.jpg",
+              "./assets/placeholder.jpg",
             ],
           },
           "Confession d'un enfoiré": {
             description: "Description for Confession d'un enfoiré.",
             images: [
+              "./assets/placeholder2.jpg",
+              "./assets/placeholder2.jpg",
               "./assets/placeholder2.jpg",
               "./assets/placeholder2.jpg",
               "./assets/placeholder2.jpg",
